<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="repoDetails"
            type="com.example.githubuser.model.Repo" />

        <variable
            name="viewModel"
            type="com.example.githubuser.view.MainViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="154dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/photo_size"
                android:layout_height="@dimen/photo_size"
                android:contentDescription="@string/user_photo"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.userImageUrl}"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="0.8"
                android:contentDescription="@string/user_name"
                android:text="@{viewModel.username}"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Some Username" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:contentDescription="@string/forks_star"
                android:src="@drawable/star_svgrepo"
                android:visibility="gone"
                tools:visibility="visible" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/all_forks_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/all_forks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/all_forks"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/all_forks_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:text="@{Integer.toString(viewModel.allForksSum)}"
                    app:layout_constraintBottom_toBottomOf="@id/all_forks"
                    app:layout_constraintStart_toEndOf="@id/all_forks"
                    app:layout_constraintTop_toTopOf="@id/all_forks"
                    tools:text="1176" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:text="@{repoDetails.name}"
                    app:layout_constraintBottom_toBottomOf="@id/name"
                    app:layout_constraintStart_toEndOf="@id/name"
                    app:layout_constraintTop_toTopOf="@id/name"
                    tools:text="Hello-World" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <TextView
                    android:id="@+id/desc_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:text="@{repoDetails.description}"
                    app:layout_constraintBottom_toBottomOf="@id/desc"
                    app:layout_constraintStart_toEndOf="@id/desc"
                    app:layout_constraintTop_toTopOf="@id/desc"
                    tools:text="My first repository	on	GitHub!" />

                <TextView
                    android:id="@+id/update_at"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/update_at"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/desc" />

                <TextView
                    android:id="@+id/update_at_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:text="@{repoDetails.updateAt}"
                    app:layout_constraintBottom_toBottomOf="@id/update_at"
                    app:layout_constraintStart_toEndOf="@id/update_at"
                    app:layout_constraintTop_toTopOf="@id/update_at"
                    tools:text="2017-08-14T08:08:10Z" />

                <TextView
                    android:id="@+id/stargazers_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/stargazers_count"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/update_at" />

                <TextView
                    android:id="@+id/stargazers_count_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:text="@{Integer.toString(repoDetails.stargazersCount)}"
                    app:layout_constraintBottom_toBottomOf="@id/stargazers_count"
                    app:layout_constraintStart_toEndOf="@id/stargazers_count"
                    app:layout_constraintTop_toTopOf="@id/stargazers_count"
                    tools:text="1421" />

                <TextView
                    android:id="@+id/forks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/forks"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/stargazers_count" />

                <TextView
                    android:id="@+id/forks_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:text="@{Integer.toString(repoDetails.forks)}"
                    app:layout_constraintBottom_toBottomOf="@id/forks"
                    app:layout_constraintStart_toEndOf="@id/forks"
                    app:layout_constraintTop_toTopOf="@id/forks"
                    tools:text="1176" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>